Refactor battle module, add tables for saving battle results